[project]
name = "saorsa-deploy"
version = "0.1.0"
description = "Deploy testnets for saorsa-node using Terraform and Pyinfra"
requires-python = ">=3.10"
dependencies = [
    "pyinfra>=3",
]

[project.scripts]
saorsa-deploy = "saorsa_deploy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
